feat(style): body container

--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,14 @@ a:hover {
 }
 
 body {
+  overflow: hidden;
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 390px;
+  height: 844px;
+  max-width: 390px;
+  max-height: 844px;
 }
 
 h1 {
