feat(architecture): create home page & component folders

--- a/src/index.scss
+++ b/src/index.scss
@@ -35,7 +35,8 @@ a:hover {
 }
 
 body {
-  background: #242424;
+  background: linear-gradient(180deg, #141533 0%, #313152 100%);
+  box-shadow: 12px 12px 24px 13px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   margin: 0;
   display: flex;
