Add component logo + fonts (Cagliostro)

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Cagliostro";
+  font-family: "Cagliostro", sans-serif;
   src: local("Cagliostro"),
   url("./fonts/Cagliostro.ttf") format("truetype");
 }
