--- a/src/components/Logo.scss
+++ b/src/components/Logo.scss
@@ -1,6 +1,6 @@
 .logo {
   color: white;
-  font-family: "Cagliostro"; //"Medium"
+  font-family: "Cagliostro", sans-serif; //"Medium"
   font-size: 2em;
 }
 
