--- a/src/components/ButtonYN.scss
+++ b/src/components/ButtonYN.scss
@@ -5,7 +5,6 @@
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -21,4 +20,8 @@ button {
   &:active {
     transform:translateY(4px);
   }
+}
+
+button p{
+  padding: 0.6em 1.2em;
 }
