--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,6 @@
   padding: 2rem;
   text-align: center;
   width: 100%;
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  max-width: 390px;
+  height: 100%;
 }
