--- a/src/index.scss
+++ b/src/index.scss
@@ -7,30 +7,29 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif, Cagliostro;
   line-height: 1.5;
   font-weight: 400;
-
+  background: rgba(120, 120, 120, .5);
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
 }
+
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -38,7 +37,6 @@ a:hover {
 body {
   background: linear-gradient(180deg, #141533 0%, #313152 100%);
   box-shadow: 12px 12px 24px 13px rgba(0, 0, 0, 0.25);
-  overflow: hidden;
   margin: 0;
   display: flex;
   place-items: center;
