--- a/src/index.scss
+++ b/src/index.scss
@@ -29,13 +29,8 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  color: white;
   text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
 }
 
 body {
